--- a/MergingArchiveFiles/MergingArchiveFiles.csproj
+++ b/MergingArchiveFiles/MergingArchiveFiles.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="Azure.Core" Version="1.35.0" />
     <PackageReference Include="ICSharpCode.SharpZipLib" Version="0.86.0" />
+    <PackageReference Include="Serilog" Version="3.1.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="SharpCompress" Version="0.34.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
